fix(WhoIsActive): add missing border-color
follow #1194

--- a/src/variables.less
+++ b/src/variables.less
@@ -29,6 +29,8 @@
 @color--info: #36c;
 @color--success: #181;
 @color--warning: #a60;
+@color--purple: #800080;
+@color--orange: #f28500;
 
 @color-group--bot: #36c;
 @color-group--confirmed: #181;
